Move Most Viewed Pages Macro to livetable #10 * I modified the implementations of the JsonNormaliser to be a component and I also added the url + the document reference to the returned json.