@@ -19,13 +19,7 @@
  */
 package com.xwiki.analytics;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import org.xwiki.component.annotation.Component;
-
-import javax.inject.Named;
-import javax.inject.Singleton;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLEncoder;
 import java.net.http.HttpClient;
@@ -34,19 +28,34 @@ import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.util.Map;
 
+import javax.inject.Inject;
+import javax.inject.Named;
+import javax.inject.Singleton;
+
+import org.xwiki.component.annotation.Component;
+import org.xwiki.component.manager.ComponentLookupException;
+import org.xwiki.component.manager.ComponentManager;
+import org.xwiki.resource.CreateResourceReferenceException;
+import org.xwiki.resource.CreateResourceTypeException;
+import org.xwiki.resource.UnsupportedResourceReferenceException;
+
+import com.fasterxml.jackson.databind.JsonNode;
 
 /**
  * The Matomo request manager.This class will make request towards Matomo and return the data.
+ *
  * @version $Id$
  */
 @Component
 @Named("Matomo")
 @Singleton
-
 public class MatomoAnalyticsManger implements AnalyticsManager
 {
+    @Inject
+    private ComponentManager componentManager;
+
     /**
-     *
+     * @param jsonNormaliserHint Hint to select the json normaliser.
      * @param address The address where the request will be made.
      * @param parameterList A list of key, value pairs that will represent the parameters for the request.
      * @return Will return a json with all the data returned by Matomo.
@@ -54,18 +63,20 @@ public class MatomoAnalyticsManger implements AnalyticsManager
      * @throws InterruptedException
      */
     @Override
-    public JsonNode requestData(String address, Map<String, String> parameterList)
-        throws IOException, InterruptedException
+    public JsonNode requestData(String address, Map<String, String> parameterList, String jsonNormaliserHint)
+        throws IOException, InterruptedException, ComponentLookupException, UnsupportedResourceReferenceException,
+        CreateResourceTypeException, CreateResourceReferenceException
     {
+        JsonNormaliser jsonNormaliser = componentManager.getInstance(JsonNormaliser.class, jsonNormaliserHint);
         HttpClient client = HttpClient.newHttpClient();
         HttpRequest httpRequest = HttpRequest.newBuilder(URI.create(buildURI(address, parameterList))).build();
-        HttpResponse<String> response =  client.send(httpRequest, HttpResponse.BodyHandlers.ofString());
-        MatomoJsonNormaliser matomoJsonNormaliser = new MatomoJsonNormaliser();
-        return matomoJsonNormaliser.normaliseData(response.body());
+        HttpResponse<String> response = client.send(httpRequest, HttpResponse.BodyHandlers.ofString());
+        return jsonNormaliser.normaliseData(response.body());
     }
 
     /**
      * This function will create the URI for the matomo request by appending all the necessary data.
+     *
      * @param address Address of the Matomo server.
      * @param parameterList List of the url parameters.
      * @return The final URI in string format.
@@ -73,20 +84,15 @@ public class MatomoAnalyticsManger implements AnalyticsManager
     private String buildURI(String address, Map<String, String> parameterList)
     {
         StringBuilder url = new StringBuilder();
-        if (!parameterList.isEmpty())
-        {
+        if (!parameterList.isEmpty()) {
             // If anyone knows a better way to build the final url please send it to me.
             url.append(address + "index.php?");
             parameterList.forEach((k, v) ->
             {
-                try {
-                    url.append(URLEncoder.encode(k, StandardCharsets.UTF_8.name()))
-                        .append('=')
-                        .append(URLEncoder.encode(v, StandardCharsets.UTF_8.name()))
-                        .append('&');
-                } catch (UnsupportedEncodingException e) {
-                    throw new RuntimeException(e);
-                }
+                url.append(URLEncoder.encode(k, StandardCharsets.UTF_8))
+                    .append('=')
+                    .append(URLEncoder.encode(v, StandardCharsets.UTF_8))
+                    .append('&');
             });
             url.deleteCharAt(url.length() - 1);
         }
